2005-10-28  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/gcompris.c: (init_background), (xrandr_init),
	(xrandr_get_config), (xrandr_set_config): fixes a crash that happens at quit time
	with xrandr set but for some reason, the xrandr variable is at NULL.
	Added signal handler on SIGSEGV to trap gcompris crash and set back the screen
	resolution.

2005-10-21  Bruno coudoin  <bruno.coudoin@free.fr>

	Completed leftright remake, integrated new highlight
	selector by Franck.

	* boards/leftright/highlight_torus.png:
	* boards/leftright/leftright-select.png:
	* src/boards/leftright.c: (leftright_create_item):

2005-10-20  Bruno coudoin  <bruno.coudoin@free.fr>

	Franck has ramake 2 backgrounds. one for color and one for leftright.
	Still need to review the way we highlight the button uppon click in the
	leftright game.

	Fixed string issues (Thanks Ronny)

	* INSTALL:
	* boards/chronos.xml.in:
	* boards/colors/colors_bg.jpg:
	* boards/colors/colors_bg.png:
	* boards/leftright/leftright-bg.jpg:
	* boards/skins/babytoy/leftright-bg.jpg:
	* boards/skins/gartoon/leftright-bg.jpg:
	* configure.in:
	* src/boards/colors.c: (start_board):
	* src/boards/leftright.c: (start_board):
	* src/boards/python/guessnumber.py:


	*** CREATED THE gcompris_7_1 branch   ***
	*** configure.in now refer to 7.2PRE1 ***

2005-10-16  Bruno coudoin  <bruno.coudoin@free.fr>

	- Completed the guessnumber activity, including artwork
	
	* boards/images/cave.png:
	* src/boards/boaricons/guessnumber.png:
	* src/boards/python/guessnumber.py:

2005-10-16  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed non translated string in chronos.
	  (strings in xml with preverve must not use \n)
	- Added a new icon for the gnumch game by Franck Doucet.
	- Removed keymap association that are not more needed in python
	  boards
	- Now the guessnumber game as an helico that shows the distance
	  to the number to find
	
	* boards/boardicons/connect4.png:
	* boards/boardicons/gnumch-equal.png: