@@ -14,7 +14,7 @@
 	 <_manual>Pick from the pictures on the left and put them on the red dots</_manual>
 	 <_goal>Sort the pictures into the order that tells the story</_goal>
 	 <_prerequisite>Tell a short story</_prerequisite>
-	 <_credit xml:space="preserve">Moon photo is copyright NASA.
+	 <_credit>Moon photo is copyright NASA.
 The space sounds come from Tuxpaint and Vegastrike which are released under the GPL license.
 The transportation images are copyright Franck Doucet.
 Dates of Transportation are based on those found in &lt;http://www.wikipedia.org&gt;.
