@@ -6,131 +6,131 @@
     </Title>
 
 <Shape name="A" pixmapfile="geography/africa/algeria.png" sound="africa/algeria" x="286" y="150" position="0">
-	<tooltip>Algeria</tooltip>
+	<_tooltip>Algeria</_tooltip>
 </Shape>
 
 <Shape name="B" pixmapfile="geography/africa/benin.png" sound="africa/benin" x="275" y="341" position="0">
-	<tooltip>Benin</tooltip>
+	<_tooltip>Benin</_tooltip>
 </Shape>
 
 <Shape name="C" pixmapfile="geography/africa/burkina_faso.png" sound="africa/burkina_faso" x="236" y="310" position="0">
-	<tooltip>Burkina Faso</tooltip>
+	<_tooltip>Burkina Faso</_tooltip>
 </Shape>
 
 <Shape name="D" pixmapfile="geography/africa/cameroon.png" sound="africa/cameroon" x="383" y="377" position="0">
-	<tooltip>Cameroon</tooltip>
+	<_tooltip>Cameroon</_tooltip>
 </Shape>
 
 <Shape name="E" pixmapfile="geography/africa/central_african_republic.png" sound="africa/central_african_republic" x="465" y="370" position="0">
-	<tooltip>Central African Republic</tooltip>
+	<_tooltip>Central African Republic</_tooltip>
 </Shape>
 
 <Shape name="F" pixmapfile="geography/africa/chad.png" sound="africa/chad" x="446" y="281" position="0">
-	<tooltip>Chad</tooltip>
+	<_tooltip>Chad</_tooltip>
 </Shape>
 
 <Shape name="G" pixmapfile="geography/africa/djibouti.png" sound="africa/djibouti" x="684" y="324" position="0">
-	<tooltip>Djibouti</tooltip>
+	<_tooltip>Djibouti</_tooltip>
 </Shape>
 
 <Shape name="H" pixmapfile="geography/africa/egypt.png" sound="africa/egypt" x="559" y="164" position="0">
-	<tooltip>Egypt</tooltip>
+	<_tooltip>Egypt</_tooltip>
 </Shape>
 
 <Shape name="I" pixmapfile="geography/africa/equatorial_guinea.png" sound="africa/equatorial_guinea" x="373" y="436" position="0">
-	<tooltip>Equatorial Guinea</tooltip>
+	<_tooltip>Equatorial Guinea</_tooltip>
 </Shape>
 
 <Shape name="J" pixmapfile="geography/africa/ethiopia.png" sound="africa/ethiopia" x="662" y="338" position="0">
-	<tooltip>Ethiopia</tooltip>
+	<_tooltip>Ethiopia</_tooltip>
 </Shape>
 
 <Shape name="K" pixmapfile="geography/africa/gabon.png" sound="africa/gabon" x="388" y="462" position="0">
-	<tooltip>Gabon</tooltip>
+	<_tooltip>Gabon</_tooltip>
 </Shape>
 
 <Shape name="L" pixmapfile="geography/africa/ganbia.png" sound="africa/gambia" x="101" y="290" position="0">
-	<tooltip>Gambia</tooltip>
+	<_tooltip>Gambia</_tooltip>
 </Shape>
 
 <Shape name="M" pixmapfile="geography/africa/ghana.png" sound="africa/ghana" x="237" y="355" position="0">
-	<tooltip>Ghana</tooltip>
+	<_tooltip>Ghana</_tooltip>
 </Shape>
 
 <Shape name="N" pixmapfile="geography/africa/guinea_bissau.png" sound="africa/guinea_bissau" x="103" y="306" position="0">
-	<tooltip>Guinea Bissau</tooltip>
+	<_tooltip>Guinea Bissau</_tooltip>
 </Shape>
 
 <Shape name="O" pixmapfile="geography/africa/guinea.png" sound="africa/guinea" x="137" y="325" position="0">
-	<tooltip>Guinea</tooltip>
+	<_tooltip>Guinea</_tooltip>
 </Shape>
 
 <Shape name="P" pixmapfile="geography/africa/ivory_coast.png" sound="africa/ivory_coast" x="192" y="356" position="0">
-	<tooltip>Ivory Coast</tooltip>
+	<_tooltip>Ivory Coast</_tooltip>
 </Shape>
 
 <Shape name="Q" pixmapfile="geography/africa/liberia.png" sound="africa/liberia" x="152" y="366" position="0">
-	<tooltip>Liberia</tooltip>
+	<_tooltip>Liberia</_tooltip>
 </Shape>
 
 <Shape name="R" pixmapfile="geography/africa/libya.png" sound="africa/libya" x="432" y="173" position="0">
-	<tooltip>Libya</tooltip>
+	<_tooltip>Libya</_tooltip>
 </Shape>
 
 <Shape name="S" pixmapfile="geography/africa/mali.png" sound="africa/mali" x="219" y="250" position="0">
-	<tooltip>Mali</tooltip>
+	<_tooltip>Mali</_tooltip>
 </Shape>
 
 <Shape name="T" pixmapfile="geography/africa/mauritania.png" sound="africa/mauritania" x="161" y="211" position="0">
-	<tooltip>Mauritania</tooltip>
+	<_tooltip>Mauritania</_tooltip>
 </Shape>
 
 <Shape name="U" pixmapfile="geography/africa/moroco.png" sound="africa/moroco" x="212" y="101" position="0">
-	<tooltip>Moroco</tooltip>
+	<_tooltip>Moroco</_tooltip>
 </Shape>
 
 <Shape name="V" pixmapfile="geography/africa/nigeria.png" sound="africa/nigeria" x="341" y="344" position="0">
-	<tooltip>Nigeria</tooltip>
+	<_tooltip>Nigeria</_tooltip>
 </Shape>
 
 <Shape name="W" pixmapfile="geography/africa/niger.png" sound="africa/niger" x="338" y="256" position="0">
-	<tooltip>Niger</tooltip>
+	<_tooltip>Niger</_tooltip>
 </Shape>
 
 <Shape name="X" pixmapfile="geography/africa/rwanda.png" sound="africa/rwanda" x="565" y="474" position="0">
-	<tooltip>Rwanda</tooltip>
+	<_tooltip>Rwanda</_tooltip>
 </Shape>
 
 <Shape name="Y" pixmapfile="geography/africa/senegal.png" sound="africa/senegal" x="106" y="277" position="0">
-	<tooltip>Senegal</tooltip>
+	<_tooltip>Senegal</_tooltip>
 </Shape>
 
 <Shape name="Z" pixmapfile="geography/africa/sierra_leone.png" sound="africa/sierra_leone" x="133" y="340" position="0">
-	<tooltip>Sierra Leone</tooltip>
+	<_tooltip>Sierra Leone</_tooltip>
 </Shape>
 
 <Shape name="AA" pixmapfile="geography/africa/somalia.png" sound="africa/somalia" x="720" y="396" position="0">
-	<tooltip>Somalia</tooltip>
+	<_tooltip>Somalia</_tooltip>
 </Shape>
 
 <Shape name="AB" pixmapfile="geography/africa/sudan.png" sound="africa/sudan" x="557" y="306" position="0">
-	<tooltip>Sudan</tooltip>
+	<_tooltip>Sudan</_tooltip>
 </Shape>
 
 <Shape name="AC" pixmapfile="geography/africa/togo.png" sound="africa/togo" x="258" y="348" position="0">
-	<tooltip>Togo</tooltip>
+	<_tooltip>Togo</_tooltip>
 </Shape>
 
 <Shape name="AD" pixmapfile="geography/africa/tunisia.png" sound="africa/tunisia" x="367" y="92" position="0">
-	<tooltip>Tunisia</tooltip>
+	<_tooltip>Tunisia</_tooltip>
 </Shape>
 
 <Shape name="AE" pixmapfile="geography/africa/uganda.png" sound="africa/uganda" x="587" y="436" position="0">
-	<tooltip>Uganda</tooltip>
+	<_tooltip>Uganda</_tooltip>
 </Shape>
 
 <Shape name="AF" pixmapfile="geography/africa/western_sahara.png" sound="africa/western_sahara" x="148" y="170" position="0">
-	<tooltip>Western Sahara</tooltip>
+	<_tooltip>Western Sahara</_tooltip>
 </Shape>
 
 <Shape name="1" pixmapfile="geography/africa/north_africa.png" type="SHAPE_BACKGROUND" sound="Undefined" x="420" y="260" position="0"/>
