@@ -6,83 +6,83 @@
     </Title>
 
 <Shape name="A" pixmapfile="geography/africa/angola.png" sound="africa/angola" x="327" y="210" position="0">
-	<tooltip>Angola</tooltip>
+	<_tooltip>Angola</_tooltip>
 </Shape>
 
 <Shape name="C" pixmapfile="geography/africa/botswana.png" sound="africa/botswana" x="388" y="317" position="0">
-	<tooltip>Botswana</tooltip>
+	<_tooltip>Botswana</_tooltip>
 </Shape>
 
 <Shape name="D" pixmapfile="geography/africa/burundi.png" sound="africa/burundi" x="444" y="137" position="0">
-	<tooltip>Burundi</tooltip>
+	<_tooltip>Burundi</_tooltip>
 </Shape>
 
 <Shape name="E" pixmapfile="geography/africa/democratic_republic_of_congo.png" sound="africa/democratic_republic_of_congo" x="364" y="136" position="0">
-	<tooltip>Democratic Republic of Congo</tooltip>
+	<_tooltip>Democratic Republic of Congo</_tooltip>
 </Shape>
 
 <Shape name="F" pixmapfile="geography/africa/equatorial_guinea.png" sound="africa/equatorial_guinea" x="253" y="82" position="0">
-	<tooltip>Equatorial Guinea</tooltip>
+	<_tooltip>Equatorial Guinea</_tooltip>
 </Shape>
 
 <Shape name="G" pixmapfile="geography/africa/gabon.png" sound="africa/gabon" x="266" y="108" position="0">
-	<tooltip>Gabon</tooltip>
+	<_tooltip>Gabon</_tooltip>
 </Shape>
 
 <Shape name="H" pixmapfile="geography/africa/kenya.png" sound="africa/kenya" x="521" y="93" position="0">
-	<tooltip>Kenya</tooltip>
+	<_tooltip>Kenya</_tooltip>
 </Shape>
 
 <Shape name="I" pixmapfile="geography/africa/lesotho.png" sound="africa/lesotho" x="424" y="385" position="0">
-	<tooltip>Lesotho</tooltip>
+	<_tooltip>Lesotho</_tooltip>
 </Shape>
 
 <Shape name="J" pixmapfile="geography/africa/madagascar.png" sound="africa/madagascar" x="596" y="287" position="0">
-	<tooltip>Madagascar</tooltip>
+	<_tooltip>Madagascar</_tooltip>
 </Shape>
 
 <Shape name="K" pixmapfile="geography/africa/malawi.png" sound="africa/malawi" x="482" y="231" position="0">
-	<tooltip>Malawi</tooltip>
+	<_tooltip>Malawi</_tooltip>
 </Shape>
 
 <Shape name="L" pixmapfile="geography/africa/mozambique.png" sound="africa/mozambique" x="493" y="283" position="0">
-	<tooltip>Mozambique</tooltip>
+	<_tooltip>Mozambique</_tooltip>
 </Shape>
 
 <Shape name="M" pixmapfile="geography/africa/namibia.png" sound="africa/namibia" x="328" y="319" position="0">
-	<tooltip>Namibia</tooltip>
+	<_tooltip>Namibia</_tooltip>
 </Shape>
 
 <Shape name="N" pixmapfile="geography/africa/republic_of_congo.png" sound="africa/republic_of_congo" x="296" y="100" position="0">
-	<tooltip>Republic of Congo</tooltip>
+	<_tooltip>Republic of Congo</_tooltip>
 </Shape>
 
 <Shape name="O" pixmapfile="geography/africa/rwanda.png" sound="africa/rwanda" x="445" y="120" position="0">
-	<tooltip>Rwanda</tooltip>
+	<_tooltip>Rwanda</_tooltip>
 </Shape>
 
 <Shape name="P" pixmapfile="geography/africa/south_africa.png" sound="africa/south_africa" x="391" y="375" position="0">
-	<tooltip>South Africa</tooltip>
+	<_tooltip>South Africa</_tooltip>
 </Shape>
 
 <Shape name="Q" pixmapfile="geography/africa/swaziland.png" sound="africa/swaziland" x="447" y="357" position="0">
-	<tooltip>Swaziland</tooltip>
+	<_tooltip>Swaziland</_tooltip>
 </Shape>
 
 <Shape name="R" pixmapfile="geography/africa/tanzania.png" sound="africa/tanzania" x="492" y="161" position="0">
-	<tooltip>Tanzania</tooltip>
+	<_tooltip>Tanzania</_tooltip>
 </Shape>
 
 <Shape name="S" pixmapfile="geography/africa/uganda.png" sound="africa/uganda" x="465" y="83" position="0">
-	<tooltip>Uganda</tooltip>
+	<_tooltip>Uganda</_tooltip>
 </Shape>
 
 <Shape name="T" pixmapfile="geography/africa/zambia.png" sound="africa/zambia" x="420" y="227" position="0">
-	<tooltip>Zambia</tooltip>
+	<_tooltip>Zambia</_tooltip>
 </Shape>
 
 <Shape name="U" pixmapfile="geography/africa/zimbabwe.png" sound="africa/zimbabwe" x="427" y="284" position="0">
-	<tooltip>Zimbabwe</tooltip>
+	<_tooltip>Zimbabwe</_tooltip>
 </Shape>
 
 <Shape name="1" pixmapfile="geography/africa/all_south_africa.png" type="SHAPE_BACKGROUND" sound="Undefined" x="420" y="260" position="0"/>
