@@ -86,7 +86,7 @@
 <Shape name="maroc" pixmapfile="geography/afrique/maroc.png" sound="geography/moroco" x="321" y="69" zoomx="1" zoomy="1" position="0">
 <_tooltip>Morocco</_tooltip>
 </Shape>
-<Shape name="mauritanie" pixmapfile="geography/afrique/mauritanie.png" sound="geography/mauritania" x="309" y="124" zoomx="1" zoomy="1" position="0">
+<Shape name="mauritanie" pixmapfile="geography/afrique/mauritania.png" sound="geography/mauritania" x="309" y="124" zoomx="1" zoomy="1" position="0">
 <_tooltip>Mauritania</_tooltip>
 </Shape>
 <Shape name="mozambique" pixmapfile="geography/afrique/mozambique.png" sound="geography/mozambique" x="594" y="403" zoomx="1" zoomy="1" position="0">
